// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Statute Table Body Cell > SSA table type > Creates a snapshot of a body cell for column 1 1`] = `
{
  "baseElement": <body>
    <div>
      <td
        class="row__cell row__cell--body row__cell--primary"
      >
        
        <div
          class="cell__title"
        >
          Section 1101
        </div>
        <div
          class="cell__usc-label"
        >
          42 U.S.C. 1301
        </div>
        <div
          class="cell__name"
        >
          Definitions
        </div>
        
      </td>
    </div>
  </body>,
  "container": <div>
    <td
      class="row__cell row__cell--body row__cell--primary"
    >
      
      <div
        class="cell__title"
      >
        Section 1101
      </div>
      <div
        class="cell__usc-label"
      >
        42 U.S.C. 1301
      </div>
      <div
        class="cell__name"
      >
        Definitions
      </div>
      
    </td>
  </div>,
  "debug": [Function],
  "emitted": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "html": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Statute Table Body Cell > SSA table type > Creates a snapshot of a body cell for column 2 1`] = `
{
  "baseElement": <body>
    <div>
      <td
        class="row__cell row__cell--body row__cell--secondary"
      >
        
        <a
          class="external"
          href="https://uscode.house.gov/view.xhtml?hl=false&edition=prelim&req=granuleid%3AUSC-prelim-title42-section1301"
          rel="noopener noreferrer"
          target="_blank"
        >
          <span
            class="table-link__span"
          >
            1301
          </span>
          <!--v-if-->
        </a>
        
      </td>
    </div>
  </body>,
  "container": <div>
    <td
      class="row__cell row__cell--body row__cell--secondary"
    >
      
      <a
        class="external"
        href="https://uscode.house.gov/view.xhtml?hl=false&edition=prelim&req=granuleid%3AUSC-prelim-title42-section1301"
        rel="noopener noreferrer"
        target="_blank"
      >
        <span
          class="table-link__span"
        >
          1301
        </span>
        <!--v-if-->
      </a>
      
    </td>
  </div>,
  "debug": [Function],
  "emitted": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "html": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Statute Table Body Cell > SSA table type > Creates a snapshot of a body cell for column 3 1`] = `
{
  "baseElement": <body>
    <div>
      <td
        class="row__cell row__cell--body row__cell--secondary"
      >
        
        <a
          class="pdf"
          href="https://www.govinfo.gov/content/pkg/COMPS-8763/pdf/COMPS-8763.pdf"
          rel="noopener noreferrer"
          target="_blank"
        >
          <span
            class="table-link__span"
          >
            Title XI
          </span>
          <span
            class="result__link--file-type"
          >
            PDF
          </span>
        </a>
        
      </td>
    </div>
  </body>,
  "container": <div>
    <td
      class="row__cell row__cell--body row__cell--secondary"
    >
      
      <a
        class="pdf"
        href="https://www.govinfo.gov/content/pkg/COMPS-8763/pdf/COMPS-8763.pdf"
        rel="noopener noreferrer"
        target="_blank"
      >
        <span
          class="table-link__span"
        >
          Title XI
        </span>
        <span
          class="result__link--file-type"
        >
          PDF
        </span>
      </a>
      
    </td>
  </div>,
  "debug": [Function],
  "emitted": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "html": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Statute Table Body Cell > SSA table type > Creates a snapshot of a body cell for column 4 1`] = `
{
  "baseElement": <body>
    <div>
      <td
        class="row__cell row__cell--body row__cell--secondary"
      >
        
        <a
          class="pdf"
          href="https://www.govinfo.gov/link/uscode/42/1301"
          rel="noopener noreferrer"
          target="_blank"
        >
          <span
            class="table-link__span"
          >
            1301
          </span>
          <span
            class="result__link--file-type"
          >
            PDF
          </span>
        </a>
        
      </td>
    </div>
  </body>,
  "container": <div>
    <td
      class="row__cell row__cell--body row__cell--secondary"
    >
      
      <a
        class="pdf"
        href="https://www.govinfo.gov/link/uscode/42/1301"
        rel="noopener noreferrer"
        target="_blank"
      >
        <span
          class="table-link__span"
        >
          1301
        </span>
        <span
          class="result__link--file-type"
        >
          PDF
        </span>
      </a>
      
    </td>
  </div>,
  "debug": [Function],
  "emitted": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "html": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Statute Table Body Cell > SSA table type > Creates a snapshot of a body cell for column 5 1`] = `
{
  "baseElement": <body>
    <div>
      <td
        class="row__cell row__cell--body row__cell--secondary"
      >
        
        <a
          class="external"
          href="https://www.ssa.gov/OP_Home/ssact/title11/1101.htm"
          rel="noopener noreferrer"
          target="_blank"
        >
          <span
            class="table-link__span"
          >
            1101
          </span>
          <!--v-if-->
        </a>
        
      </td>
    </div>
  </body>,
  "container": <div>
    <td
      class="row__cell row__cell--body row__cell--secondary"
    >
      
      <a
        class="external"
        href="https://www.ssa.gov/OP_Home/ssact/title11/1101.htm"
        rel="noopener noreferrer"
        target="_blank"
      >
        <span
          class="table-link__span"
        >
          1101
        </span>
        <!--v-if-->
      </a>
      
    </td>
  </div>,
  "debug": [Function],
  "emitted": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "html": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Statute Table Body Cell > SSA table type > displays 'None' in Statute Compilation BodyCell when source_url is null 1`] = `
{
  "baseElement": <body>
    <div>
      <td
        class="row__cell row__cell--body row__cell--secondary"
      >
        
        <span
          data-testid="1302-none"
        >
          None
        </span>
        
      </td>
    </div>
  </body>,
  "container": <div>
    <td
      class="row__cell row__cell--body row__cell--secondary"
    >
      
      <span
        data-testid="1302-none"
      >
        None
      </span>
      
    </td>
  </div>,
  "debug": [Function],
  "emitted": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "html": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
